[tool.poetry]
name = "osr-stuff"
version = "0.1.0"
description = ""
authors = ["Andrew Herbig <notandrewherbig@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pygame = "^2.1.0"
recordclass = "^0.15"
Pillow = "^8.4.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
flake8 = "^3.9.2"
pre-commit = "^2.15.0"
pyupgrade = "^2.29.0"
isort = "^5.9.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
